document tree wrong margin-top fix

--- a/knowage/web-content/themes/commons/css/SASS/components/_documentTree.scss
+++ b/knowage/web-content/themes/commons/css/SASS/components/_documentTree.scss
@@ -2,7 +2,6 @@ document-tree {
 
 	.angular-ui-tree-handle {
 	md-icon {
-	    top: 3px;
     	position: relative;
 	}
 	padding: 5px;}
